--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.home.myapplication">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,10 +32,11 @@
             android:name=".Questionarre1"
             android:label="Questionnaire"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".trends"
-            android:screenOrientation="portrait"
+        <activity
+            android:name=".trends"
             android:label="Spending Trends"
-        />
+            android:screenOrientation="portrait" />
+        <activity android:name=".offers"></activity>
     </application>
 
 </manifest>
