Started the portfolio section.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         }
     }
 }
+dependencies {
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
